reference-llvm/tests/should-fail/fail4.mu
// empty block

function @entry foo() {
    if (true) {
        
    }
}
